# mcp-talib

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  logging.conf  logging.conf.example  mcp-inspector-config.json  pyproject.toml  tasks.md
src/mcp_talib/: __init__.py  cli.py  cli_tools.py  http_api.py  http_api_server.py  schemas.py  server.py
src/mcp_talib/core/: __init__.py  mcp_server.py  server.py
src/mcp_talib/errors/: __init__.py
src/mcp_talib/indicators/: __init__.py  base.py  bbands.py  dema.py  ema.py  ht_trendline.py  kama.py  ma.py  mama.py  mavp.py  midpoint.py  midprice.py  registry.py  rsi.py  sar.py  sarext.py  sma.py  t3.py  tema.py  trima.py  wma.py
src/mcp_talib/models/: __init__.py  indicator_result.py  market_data.py
src/mcp_talib/transport/: __init__.py  base.py  http.py  http_api.py  stdio.py
tests/: __init__.py  conftest.py  test_api_tools_list.py  test_http_api.py  test_server.py
tests/integration/: all_tools.py  bbands_tool_call.py  client_script.py  ema_script.py  ema_tool_call.py
tests/unit/: test_bbands.py  test_dema.py  test_ema.py  test_ema_tool_call.py  test_ht_trendline.py  test_kama.py  test_ma.py  test_mama.py  test_mavp.py  test_midpoint.py  test_midprice.py  test_sar.py  test_sarext.py  test_t3.py  test_tema.py  test_tool_call.py  test_trima.py  test_wma.py
