[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-talib"
version = "0.1.0"
description = "Technical analysis indicators MCP server"
authors = [
    {name = "TA-Lib MCP Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0",
    "typer>=0.20.0",
    "anthropic>=0.74.1",
    "python-dotenv>=1.2.1",
    "pytest[asyncio]>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "TA-Lib>=0.4.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=23.10.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
]

[project.scripts]
mcp-talib = "mcp_talib.cli:cli_main"
mcp-talib-server = "mcp_talib.server:server_main"

[project.urls]
Homepage = "https://github.com/your-username/mcp-talib"
Documentation = "https://github.com/your-username/mcp-talib/docs"
Repository = "https://github.com/your-username/mcp-talib.git"
Issues = "https://github.com/your-username/mcp-talib/issues"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "UP", "B", "CLE", "D", "C"]
ignore = ["D203", "D212", "D213"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S"]

[tool.black]
target-version = ['py311']
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:anyio._backends._asyncio",
]

[tool.coverage.run]
source = ["src/mcp_talib"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
